--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         </header>
         <article id="pic"
              >
-                        <img class="mySlides" src="jobsite1.jpeg" style="width:100%" >
-                        <img class="mySlides" src="amcat2.jpeg" style="width:100%">
-                        <img class="mySlides" src="cocubes2.jpeg" style="width:100%">
+                        <img class="mySlides" src="jobsite3.jpeg" style="width:100%" >
+                        <img class="mySlides" src="amcat3.jpeg" style="width:100%">
+                        <img class="mySlides" src="cocubes.jpeg" style="width:100%">
                           
             </article> <script>
                     var myIndex = 0;
