--- a/index.html
+++ b/index.html
@@ -149,7 +149,32 @@
                                               </div>
                                             </div>
   
-
+ <!--extra-->
+ <section class='content' id="1">
+        <div class='features'>
+            <div class='infoBox'>
+        <h3>Latest Career Article</h3>  
+        <div class="desc">
+            <p>5 Reasons Why Employee Who Love What They Are Do The Best</p>
+          <center><a href="https://www.monsterindia.com/career-advice/5-reasons-why-employees-who-love-what-they-do-are-the-happiest-6459.html"><input type="button" value="Read More"></a></center>  
+        </div>
+        </div>
+        <div class='infoBox'>
+                <h3>HOW TO?</h3>  
+                <div class="desc">
+                    <p>HOW TO :Charge Your Career Through Endorsement</p>
+                    <center><a href="https://www.monsterindia.com/career-advice/how-to-charge-your-career-through-endorsements-6317.html"><input type="button" value="Read More"></a></center>
+                </div>
+                </div><div class='infoBox'>
+                        <h3>CV Guide</h3>  
+                        <div class="desc">
+                            <p>A Complete Guide On CV Preparation</p>
+                            <center><a href="https://www.monsterindia.com/career-advice/a-complete-guide-on-cv-preparation-412.html"><input type="button" value="Read More"></a></center>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+                        <!--extra ends-->
 
 <!--feedback-->
 
