--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
                                     eLitmus Evaluation Private Limited is an Indian company that helps companies in hiring employees for entry-level jobs.  
                             </div>
                           </div>
+                     <div class='infoBox'>
+                            
+                            <h3>LinkedIn</h3>
+                            <div class='desc'>
+                                   LinkedIN is a professional connecting site.It is a plateform where people connect with each other professionally.  
+                            </div>
+                          </div>
                           <div class='infoBox'>
                         
                             <h3>CoCubes</h3>
